Pull request #176: WDZO-1706: fix url validation and DzoForm fixes
Squashed commit of the following:

commit b23413a3a670685780001d9b8b8e89a1cd1f5229
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Fri Mar 26 15:06:53 2021 +0300

    WDZO-1706: fixed function

commit e199014b95dfcce3a1698107aad0f55db768019a
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Thu Mar 25 11:23:05 2021 +0300

    WDZO-1759: fix offerDuration 0 or null when promo-campaign edit or copy

commit ceafbe17fe586389d61821fa161d5a0d3e3d4486
Author: OUT-Litvin-OA <OALitvin@sberbank.ru>
Date:   Tue Mar 23 17:03:30 2021 +0300

    WDZO-1706: Fix url validation

commit 92daf6af335d264184dccc0d620dadf382b333f4
Merge: b6b300f c516367
Author: OUT-Litvin-OA <OALitvin@sberbank.ru>
Date:   Mon Mar 22 17:33:24 2021 +0300

    Merge branch 'develop' of https://sbtatlas.sigma.sbrf.ru/stash/scm/mobiledevprojects/distributor-admin into feature/WDZO-1706

commit b6b300fe246fd17c6106d13b4100bed0365047f2
Author: OUT-Litvin-OA <OALitvin@sberbank.ru>
Date:   Mon Mar 22 17:07:50 2021 +0300

    WDZO-1706: DzoForm functions to dzoFormFunction file

commit b8e557ea02604abc210c85bf00045c227d9522dd
Merge: 9fd15e4 3583ee1
Author: OUT-Litvin-OA <OALitvin@sberbank.ru>
Date:   Mon Mar 22 16:54:41 2021 +0300

    Merge branch 'develop' of https://sbtatlas.sigma.sbrf.ru/stash/scm/mobiledevprojects/distributor-admin into feature/WDZO-1706

commit 9fd15e45bd54299c3266e8413ec273c7d66f241c
Author: OUT-Litvin-OA <OALitvin@sberbank.ru>
Date:   Mon Mar 22 13:40:28 2021 +0300

    WDZO-1706: Code refactoring

commit 9ac5943f2c9d97b418c7396d55b94c5f1b8f8e4b
Author: OUT-Litvin-OA <OALitvin@sberbank.ru>
Date:   Fri Mar 19 16:50:33 2021 +0300

    WDZO-1706: fix url validation
    dzoForm fixes

--- a/src/containers/DzoPage/DzoForm/DzoForm.module.css
+++ b/src/containers/DzoPage/DzoForm/DzoForm.module.css
@@ -1,4 +1,6 @@
 .wrapper {
+    display: flex;
+    flex-direction: column;
     width: 100%;
     height: 100%;
 }
@@ -43,7 +45,7 @@
 }
 
 .btnGroup {
-    margin: 24px 0 24px;
+    margin: 24px 0;
 }
 
 .btnGroup > button {
